--- a/pm.css
+++ b/pm.css
@@ -157,12 +157,12 @@ figcaption {
 .pair2 {
 	height: 100px;
 }
-
+/*
 .pairdiv2 {
 	border-style: solid;
 	padding-top: 254px;
 }
-
+*/
 .pairdiv2>figure {
 	margin:0px;
 
