slightly modify css

--- a/pm.css
+++ b/pm.css
@@ -161,7 +161,7 @@ figcaption {
 .pairdiv2 {
 	border-style: solid;
 	padding-top: 104px;
-	font-size: 10px;
+	font-size: 10pt;
 }
 
 .pairdiv2>figure {
