--- a/pm.css
+++ b/pm.css
@@ -268,6 +268,7 @@ div#bank .ui-page{
 	background-color: #000000 !important;
 }
 
-.ui-navbar{
+.ui-navbar .ui-btn{
+	height: 94px;
 	height:9%;
 }
