--- a/pm.css
+++ b/pm.css
@@ -268,6 +268,6 @@ div#bank .ui-page{
 	background-color: #000000 !important;
 }
 
-.ui-navbar.ui-btn{
+div.ui-navbar.ui-btn{
 	height: 94px;
-}
+}g
