--- a/pm.css
+++ b/pm.css
@@ -268,6 +268,6 @@ div#bank .ui-page{
 	background-color: #000000 !important;
 }
 
-.menu .ui-btn:not(.logo){
+.menu .ui-btn:not(.logo) + .menu .li{
 	height: 94px;
 }g
