--- a/pm.css
+++ b/pm.css
@@ -91,17 +91,18 @@ div.ui-page{
 	height: 100%;
 }
 
-div.ui-content:not(.non-half){
+div.ui-content{
 	background-color: #181818;
 	color: white;
-	padding-left: 20%;
-	padding-right: 20%;
 	min-height: 100%;
 	height: 100%;
 	font-size: 17pt;
 	opacity: 0.85;
+}
 
-
+div.ui-content:not(.non-half){
+	padding-left: 20%;
+	padding-right: 20%;
 }
 .ui-header .ui-title, .ui-footer .ui-title {
 	font-size: 24px;
