--- a/pm.css
+++ b/pm.css
@@ -292,8 +292,9 @@ div#bank .ui-page{
     margin-top: 10px;
     margin-left: 10px;
     margin-right: 10px;
-    -webkit-transform: rotate(-2deg);
+    /*-webkit-transform: rotate(-2deg);
     -moz-transform: rotate(-2deg);
+    */
     -moz-box-shadow: 10px 10px 5px #666;
     -webkit-box-shadow: 10px 10px 5px #666;
     box-shadow: 10px 10px 5px #666;
