--- a/pm.css
+++ b/pm.css
@@ -286,8 +286,7 @@ div#bank .ui-page{
 
 /* story bank list view */
 #bankStories li {
-	/*display: inline-block;*/
-	display:inline;
+	display: inline-block;
     border: 5px solid white;
     background: white;
     opacity:1;
