fix button width

--- a/pm.css
+++ b/pm.css
@@ -104,7 +104,7 @@ div.ui-content{
 	padding-top: 5%;
 }
 /*play memory game button in banklist */
-#banklist p {
+#banklist-button {
 	padding-left: 20%;
 	padding-right: 20%;
 }
