--- a/pm.css
+++ b/pm.css
@@ -295,7 +295,7 @@ div#bank .ui-page{
 
 
 /* story bank list view */
-#bankStories li {
+#bankStories li, .rehearsalBoard li {
 	display: inline-block;
 	list-style-type: none;
     border: 5px solid white;
@@ -316,7 +316,7 @@ div#bank .ui-page{
     transition: transform .2s ease-out;
 }
 
-#bankStories li:hover {
+#bankStories li:hover, .rehearsalBoard li:hover {
     -webkit-transform: scale(1.2);
     -moz-transform: scale(1.2);
     position: relative;
@@ -330,6 +330,7 @@ div#bank .ui-page{
     box-shadow: 10px 10px 5px #666;
     */
 }
+
 .storyText {
 	color:black;
 }
