--- a/pm.css
+++ b/pm.css
@@ -345,11 +345,13 @@ div#bank .ui-page{
 
 /* set randomness text box css */
 #textCounter {
-	font-size: 13px;
+	font-size: 14px;
 	text-align: right;
+	text-shadow: none;
 }
 
 #charCounter, #uniqueCharCounter {
 	color: purple;
+	font-size: 16px;
 	font-family: 'ABeeZee', sans-serif;
 }
