--- a/pm.css
+++ b/pm.css
@@ -355,3 +355,8 @@ div#bank .ui-page{
 	font-size: 16px;
 	font-family: 'ABeeZee', sans-serif;
 }
+/* when not logged in button should not be functioniny */
+
+.ui-disabled.ui-link.ui-btn {
+	color: gray;
+}
