--- a/pm.css
+++ b/pm.css
@@ -43,7 +43,7 @@
 }
 
 #clock {
-	height: 50%;
+	height: 40%;
 }
 
 .image-checkbox-container input[type="checkbox"]{
@@ -237,7 +237,7 @@ body, html {
 .ui-navbar ul li:not(.logo):hover {
 	opacity: 0.6;
 }
-.ui-navbar li .ui-block-b:hover {
+.ui-navbar li .ui-block-b:hover:not() {
 	opacity: 0.7;
 }
 .ui-header .logo .ui-link .ui-btn {
@@ -360,3 +360,5 @@ div#bank .ui-page{
 .ui-disabled.ui-link.ui-btn {
 	color: gray;
 }
+
+#
