--- a/pm.css
+++ b/pm.css
@@ -316,7 +316,7 @@ div#bank .ui-page{
     transition: transform .2s ease-out;
 }
 
-#bankStories li:hover, .rehearsalBoard li:hover {
+#bankStories li.initializedStory:hover, .rehearsalBoard li:hover {
     -webkit-transform: scale(1.2);
     -moz-transform: scale(1.2);
     position: relative;
@@ -357,9 +357,61 @@ div#bank .ui-page{
 }
 /* when not logged in button should not be functioniny */
 
+#bankStories li.unInitializedStory  {
+	opacity:0.7;
+}
 
+#bankStories li.unInitializedStory p button {
+	font-family: Lato;
+}
 /* place holder css */
 ::-webkit-input-placeholder { font-family: Lato; }
 ::-moz-placeholder { font-family: Lato; } /* firefox 19+ */
 :-ms-input-placeholder { font-family: Lato; } /* ie */
 input:-moz-placeholder { font-family: Lato; }
+
+
+
+/* story bank list view */
+#groupStories li, .rehearsalBoard li {
+	display: inline-block;
+	list-style-type: none;
+    border: 5px solid white;
+    background: white;
+    opacity:1;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    /*-webkit-transform: rotate(-2deg);
+    -moz-transform: rotate(-2deg);
+    */
+    -moz-box-shadow: 10px 10px 5px #666;
+    -webkit-box-shadow: 10px 10px 5px #666;
+    box-shadow: 10px 10px 5px #666;
+    vertical-align: middle;
+    -wekkit-transition: -webkit-transform .2s ease-out;
+    -moz-transition: -moz-transform .2s ease-out;
+    transition: transform .2s ease-out;
+}
+
+#groupStories li.initializedStory:hover, .rehearsalBoard li:hover {
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    position: relative;
+    margin: auto;
+    z-index: 5;
+    vertical-align: middle;
+    text-align: center;
+    height: 60%;
+    /*-moz-box-shadow: 10px 10px 5px #666;
+    -webkit-box-shadow: 10px 10px 5px #666;
+    box-shadow: 10px 10px 5px #666;
+    */
+}
+#groupStories li.unInitializedStory  {
+	opacity:0.7;
+}
+
+#groupStories li.unInitializedStory p button {
+	font-family: Lato;
+}
