--- a/pm.css
+++ b/pm.css
@@ -415,3 +415,34 @@ input:-moz-placeholder { font-family: Lato; }
 #groupStories li.unInitializedStory p button {
 	font-family: Lato;
 }
+
+
+/* Slider CSS */
+input#slider {
+	display: none;
+}
+
+.ui-slider {
+	display: inline-block;
+	width: 60%;
+	vertical-align: middle
+}
+
+div#sliderDiv {
+	height: 20%;
+	padding-top: 5%;
+}
+
+div.ui-slider {
+	padding-right: 5%;
+}
+
+img.action {
+	height:60px;
+	width:60px;
+	position:absolute;
+	left:10px;
+}
+span.pairdiv.overlayContainer {
+	position:relative;
+}
